--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 	<!-- Favicon -->
 
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
     <!-- CSS only -->
     
@@ -87,7 +87,7 @@
             </div>
 
             <div class="d-flex flex-column align-items-center" style="padding-bottom: 15px;">
-                <button type="button" class="btn btn-outline-success showMeNow" id="feedback" style="max-width: 20vh; height: 40px;" onclick="createFeedback()">Обратная связь</button>
+                <button type="button" class="btn btn-outline-success showMeNow" id="feedback" style="max-width: 20vh; min-height: 40px;" onclick="createFeedback()">Обратная связь</button>
                 <div id="plsWait" class="spinner-border text-success hideMeNow" role="status" style="height: 40px; width: 40px"></div>
                 <section id="feedbackForm" class="bg-dark text-white">
                     <div id="headerBlock">
