--- a/russia.html
+++ b/russia.html
@@ -18,7 +18,7 @@
 
 	<!-- Favicon -->
 
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
     <!-- CSS only -->
     
@@ -111,19 +111,19 @@
             <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="/images/shdBitblaze.png" class="d-block w-100" alt="...">
+                        <img src="./images/shdBitblaze.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(204, 204, 204, 0.5);border-radius: 7px;">
                             <h5>CХД Sirius 8012SS</h5>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="/images/SafeRAYBM.png" class="d-block w-100" alt="...">
+                        <img src="./images/SafeRAYBM.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(204, 204, 204, 0.5);border-radius: 7px;">
                             <h5>Моноблок SafeRAY на базе Baikal-M</h5>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="/images/SafeRayS301E8C.png" class="d-block w-100" alt="...">
+                        <img src="./images/SafeRayS301E8C.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(204, 204, 204, 0.5);border-radius: 7px;">
                             <h5>ПК SafeRAY S301 на базе Эльбрус-8С</h5>
                         </div>
