--- a/architecture.html
+++ b/architecture.html
@@ -18,7 +18,7 @@
 
 	<!-- Favicon -->
 
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
     <!-- CSS only -->
     
