--- a/about.html
+++ b/about.html
@@ -130,13 +130,13 @@
     </section>
 
     <section id="popup" class="bg-dark text-white">
-        <div id="headerBlock">
-            <h2 id="headerAbout">О разработчике</h2>
+        <div id="headerBlock1">
+            <h2 id="headerAbout1">О разработчике</h2>
             <div class="exitButton" onclick="closePopup('popup')">
                 <h2>X</h2>
             </div>
         </div>
-        <div id="popupDiv">
+        <div id="popupDiv1">
             <p>Курсовая работа выполнена студентом ИКБО-01-20 Ляшенко Виктором</p>
         </div>
     </section>
