--- a/examples.html
+++ b/examples.html
@@ -72,7 +72,7 @@
                                 <h4 class="card-title">Intel Core i5 10400</h4>
                                 <p class="card-text fixText">Процессоры Intel Core 10-го поколения обеспечивают высокую производительность для всех задач</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup1')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup1')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                                 <h4 class="card-title">AMD Ryzen 5 5600X</h4>
                                 <p class="card-text fixText">AMD Ryzen серии 5000 — игровые процессоры с самым высоким рейтингом в мире</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup2')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup2')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                                     Процессоры Intel Xeon серии W предназначены для профессиональных создателей контента
                                 </p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup3')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup3')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                                 <h4 class="card-title">AMD Threadripper 3970X</h4>
                                 <p class="card-text fixText">Реализуйте ваши творческие замыслы с самыми мощными в мире процессорами для настольных ПК</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup4')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup4')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                                 <h4 class="card-title">Intel Core i9 10900</h4>
                                 <p class="card-text fixText">Десятиядерный двадцатипоточный процессор Intel обеспечивает бесперебойную производительность в любых ситуациях</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup5')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup5')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                                 <h4 class="card-title">Intel Xeon Silver 4208</h4>
                                 <p class="card-text fixText">Серверный процессор Intel Xeon Silver 4208 обеспечит вам высокую надежность и работу в экстремальных условиях</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup6')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup6')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                                 <h4 class="card-title">Intel Core i3 10105</h4>
                                 <p class="card-text fixText">Этот процессор подойдет для сборки мощного оборудования, рассчитанного на эффективную работу с множеством приложений</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup7')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup7')">Описание</button>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                                 <h4 class="card-title">Intel Pentium G6605</h4>
                                 <p class="card-text fixText">Процессор со сбалансированной производительностью. Можно использовать его для создания домашних и офисных сборок</p>
                             </div>
-                            <button class="btn btn-success fixButton" onclick="createPopup('popup8')">Все характеристики</button>
+                            <button class="btn btn-success fixButton" onclick="createPopup('popup8')">Описание</button>
                         </div>
                     </div>
                 </div>
