--- a/examples.html
+++ b/examples.html
@@ -64,7 +64,7 @@
     <section class="bg-dark text-white">
         <div class="container">
             <div class="row rowWrapper">
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/i510.jpeg" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/ryzen5.png" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/ixeon.jpeg" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/threadripper.jpeg" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/i910.jpeg" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/ixeon3647.png" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/i310.jpeg" alt="Card image cap">
                         <div class="card-block fixCardBlock">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 wrapMe">
+                <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 wrapMe">
                     <div class="card bg-secondary text-white">
                         <img class="card-img-top img-fluid" src="images/G6605.jpeg" alt="Card image cap">
                         <div class="card-block fixCardBlock">
