--- a/russia.html
+++ b/russia.html
@@ -135,7 +135,7 @@
 
     <section class="bg-dark text-white">
         <div class="container">
-            <div class="d-flex flex-column flex-sm-column flex-md-row flex-lg-row flex-xl-row flex-xxl-row" style="padding-top: 15px; padding-bottom: 15px;">
+            <div class="d-flex flex-column flex-sm-column flex-md-row flex-lg-row flex-xl-row flex-xxl-row" style="padding-top: 15px; padding-bottom: 15px; align-items: center;">
                 <div class="col-auto col-sm-auto col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div style="max-width: min-content; padding-top: 15px; padding-bottom: 15px;">
                         <p style="justify-content: center; text-align: center; font-size: larger;">Гимн РФ для поднятия патриотических настроений</p>
