--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                     </div>
                     <div id="popupDiv" style="display: flex; flex-direction: column; padding: 15px;">
                         <p style="margin:5px;">Телефон:</p>
-                        <input id="telInput" style="margin:5px;" type="tel" name="telphone" placeholder="+7 (777) 777-77-77" pattern="(^8|7|\+7)((\d{10})|(\s\(\d{3}\)\s\d{3}\s\d{2}\s\d{2}))$" maxlength="18"  title="Ten digits code" required/>
+                        <input id="telInput" style="margin:5px;" type="tel" name="telphone" placeholder="+7 (777) 777-77-77" pattern="^(8|7|\+7)((\d{10})|(\s\(\d{3}\)\s\d{3}\s\d{2}\s\d{2}))$" maxlength="18"  title="Ten digits code" required/>
                         <div style="display: flex; justify-content: center;">
                             <button class="btn btn-success" style="margin-top:10px; max-width: 80%;" onclick="goGoWait()">Подтвердить</button>
                         </div>
